Retrieved json data

--- a/ex2/ex2/fr.lproj/Main.strings
+++ b/ex2/ex2/fr.lproj/Main.strings
@@ -21,7 +21,7 @@
 "9iQ-LN-RTF.text" = "Label";
 
 /* Class = "UIButton"; normalTitle = "fr"; ObjectID = "CoK-0u-Ppa"; */
-"CoK-0u-Ppa.normalTitle" = "frii";
+"CoK-0u-Ppa.normalTitle" = "fr";
 
 /* Class = "UIButton"; normalTitle = "en"; ObjectID = "FU2-jY-0jp"; */
 "FU2-jY-0jp.normalTitle" = "en";
