--- a/ex2/ex2/en.lproj/Main.strings
+++ b/ex2/ex2/en.lproj/Main.strings
@@ -41,6 +41,9 @@
 /* Class = "UILabel"; text = "Coordinates:"; ObjectID = "S9m-Az-dNI"; */
 "S9m-Az-dNI.text" = "Coordinates:";
 
+/* Class = "UIButton"; normalTitle = "Tap once to load the Villo stations"; ObjectID = "T9i-Ck-KRV"; */
+"T9i-Ck-KRV.normalTitle" = "Tap once to load the Villo stations";
+
 /* Class = "UILabel"; text = "Banking:"; ObjectID = "TsC-96-Jxn"; */
 "TsC-96-Jxn.text" = "Banking:";
 
